Add LongTts and keywords extraction.

--- a/AipSdk/AipSdk.csproj
+++ b/AipSdk/AipSdk.csproj
@@ -2,12 +2,12 @@
   <PropertyGroup>
     <TargetFrameworks>net35;net40;net45;netstandard2.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageId>Baidu.AI</PackageId>
-    <Version>3.6.8</Version>
+    <PackageId>Joeries.Baidu.AI</PackageId>
+    <Version>3.6.13</Version>
     <Authors>Baidu</Authors>
     <Company>Baidu</Company>
     <Product>ai.baidu.com</Product>
-    <Description>Official release of Baidu AI(http://ai.baidu.com) SDK, including Speech, Face, NLP, OCR, ImageClassify etc.</Description>
+    <Description>Official release of Baidu AI(http://ai.baidu.com) SDK, including Speech, Face, NLP, OCR, ImageClassify etc. LongTts and keywords extraction added.</Description>
     <PackageLicenseUrl>https://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
     <PackageProjectUrl>https://ai.baidu.com</PackageProjectUrl>
     <PackageIconUrl>https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/img/logo/bd_logo1_31bdc765.png</PackageIconUrl>
@@ -15,8 +15,9 @@
     <PackageTags>Baidu AI SDK AIP</PackageTags>
     <RepositoryUrl>https://github.com/Baidu-AIP/dotnet-sdk</RepositoryUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Update Face interface to FaceV3; Add new OCR interface</PackageReleaseNotes>
+    <PackageReleaseNotes>Update Face interface to FaceV3; Add new OCR interface; Add LongTts and keywords extraction.</PackageReleaseNotes>
     <RootNamespace />
+    <Title>Baidu.AI</Title>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net35|AnyCPU'">
     <DocumentationFile>bin\Release\net35\AipSdk.xml</DocumentationFile>
